fix thread lock on serialize